next color brand-yellow

--- a/dev/markup.html
+++ b/dev/markup.html
@@ -51,11 +51,12 @@
             <li class="col-lg-4 col-md-6 col-xs-12">
                 <h2>Font-weight </h2>
                 <ol>
-                    <li class="font-weight-light">font-weight-light - Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci nobis, facilis consectetur officiis asperiores neque velit similique quod rem voluptatibus?</li>
-
+                  
                     <li class="font-weight-normal">font-weight-normal - Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, laboriosam iure? Exercitationem architecto tempora adipisci veniam dicta pariatur fuga eos?</li>
 
                     <li class="font-weight-bold">font-weight-bold - Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus ipsam ea earum, officia minima molestias accusantium nihil repellendus delectus aperiam?</li>
+
+                    <li class="font-KyivTypeSerif">Font - KyivTypeSerif - Фонд «Обіруч» не лише збирає кошти на ті чи інші потреби. Ми об’єднуємо самих різних людей заради спільної мети. Разом ми збережемо мир и спасемо світ!</li>
                 </ol>
             </li>
             <li class="col-lg-4 col-md-6 col-xs-12">
