--- a/dev/about-page.html
+++ b/dev/about-page.html
@@ -6,8 +6,8 @@
         <div class="first-screen__logo">
             <img src="assets/img/about-page-first-screen-logo.png" class="img-fluid" alt="about-page-first-screen-logo">
         </div>
-        <h1>Про фонд «Перша Зірка»</h1>
-        <p>«Перша Зірка» не лише збирає кошти на ті чи інші потреби. Ми об’єднуємо самих різних людей заради спільної мети. Разом ми збережемо мир и спасемо світ!  Головна місія фонду — створення системної благодійності нового зразка, що будується на підзвітності, прозорості, відповідальності та залученості громадян.</p>
+        <h1>Про фонд «Обіруч»</h1>
+        <p>«Обіруч» не лише збирає кошти на ті чи інші потреби. Ми об’єднуємо самих різних людей заради спільної мети. Разом ми збережемо мир и спасемо світ!  Головна місія фонду — створення системної благодійності нового зразка, що будується на підзвітності, прозорості, відповідальності та залученості громадян.</p>
         <p>Розвиток культури масової благодійності в Україні та формування розгалуженої мережі високопрофесійних благодійних організацій, яким під силу вирішення соціальних проблем будь-якої складності  - це наш внесок в розвиток проактивного та сильного українського суспільства. Наш фонд  є потужною комунікаційною платформою для благодійного сектору, зручним онлайн-сервісом, який щодня дозволяє зустрітися тисячам людей - тим, хто потребує допомоги і тим, хто може допомогти.  Ми не лише залучаємо та скеровуємо гроші туди, де вони найгостріше необхідні, ми відкриваємо доступ організаціям до ідей та інформації, а бізнесу — до найпрозоріших організацій та можливості отримати повну фінансову звітність.</p>
     </div>
     <div class="wrapper">
