--- a/dev/contacts.html
+++ b/dev/contacts.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="contact-item">
                             <div class="img-box">
-                                <img src="assets/img/icon-location.svg" class="img-fluid" alt="location">
+                                <img src="assets/img/icon-mail.svg" class="img-fluid" alt="location">
                             </div>
                             <div class="text-box">
                                 <h6>Електронна пошта:</h6>
