--- a/dev/projects-category.html
+++ b/dev/projects-category.html
@@ -8,7 +8,7 @@
             <span>Благодійні проекти</span>
         </h1>
         @@include('templates/projects-filters.html')
-        @@include('templates/projects-grid.html')
+        @@include('templates/template-grid.html')
         @@include('templates/pagination.html')
         @@include('templates/form.html')
         @@include('templates/block.html')
