creat modal after click

--- a/dev/people-search.html
+++ b/dev/people-search.html
@@ -24,5 +24,23 @@
         @@include('templates/form.html')
         @@include('templates/block.html')
         @@include('templates/seo-text.html')
+
+         <!-- Модальное окно -->
+        <div class="modal">
+            <div class="modal-content">
+                <span class="close-modal">×</span>
+                <div class="modal-body">
+                    <div class="modal-header">
+                        <h2 class="modal-name"></h2>
+                        <div class="modal-age"></div>
+                    </div>
+                    <img class="modal-photo" src="" alt="">
+                    <div class="modal-details"></div>
+                    <div class="modal-city"></div>
+                </div>
+            </div>
+        </div>
+
+  
 </main>
 @@include('templates/footer.html')
